--- a/css/style.css
+++ b/css/style.css
@@ -1391,9 +1391,15 @@ footer p {
 }
 
 @media screen and (max-width: 768px) {
+  .image-modal {
+    padding-top: 0;
+  }
+  
   .image-modal-content {
-    max-width: 95%;
-    max-height: 80vh;
+    max-width: 100%;
+    max-height: 100vh;
+    width: 100%;
+    height: 100%;
   }
   
   .image-modal-close {
